# client

./: .eslintrc.json  .gitignore  .gitmodules  .prettierignore  .prettierrc.json  DEPLOYMENT.md  DOCKER_PRODUCTION.md  Dockerfile.prod  README.md  docker-compose.prod.client.yml  electron-builder.yml  main.cjs  main.js  package-lock.json  package.json  preload.js  vite.config.mts  vite.config.ts  vitest.config.ts
.github/workflows/: deploy.yml  desktop-release.yml
app/: app.css  root.tsx  routes.ts
app/components/: AttachmentBubble.test.tsx  AttachmentBubble.tsx  AudioControls.tsx  Button.tsx  Card.tsx  ChannelCreationModal.tsx  CroppableImage.tsx  CustomTitleBar.tsx  DeviceSelectorModal.tsx  EmojiPicker.tsx  ErrorState.tsx  FileUploadInput.tsx  Input.tsx  InviteModal.tsx  LoadingState.tsx  MarkdownRenderer.tsx  MediaLightbox.tsx  MessageContextMenu.tsx  MessageEmbeds.tsx  MessageReportModal.tsx  NotificationMenu.tsx  PufferblowBrand.tsx  SearchModal.tsx  ServerCreationModal.tsx  ThemeProvider.tsx  ThemeToggle.tsx  Toast.tsx  UserCard.tsx  UserContextMenu.tsx  UserPanel.tsx  UserProfileModal.tsx  VideoPlayer.tsx  VoiceCallUI.tsx  VoiceChannel.tsx
app/hooks/: usePing.ts  useWebSocket.ts
app/models/: Channel.ts  Message.ts  Ping.ts  User.ts  index.ts
app/routes/: control-panel.tsx  dashboard.tsx  download.tsx  (+6 more)
electron/: main.ts  preload.ts  tray.ts  tsconfig.json
scripts/: run-with-node20.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: credentials.rs  mod.rs  notifications.rs  updater.rs
(+91 files in other folders)
