[package]
name = "pufferblow-client"
version = "1.0.0"
description = "Pufferblow Tauri Desktop App"
authors = ["Pufferblow"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

[features]
default = []
